# python-xldparser

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/xldparser/: __init__.py  constants.py  toc_entry.py  track.py
xldparser/: __init__.py  constants.py  second_sector.py  track.py
