[project]
name = "xldparser"
version = "0.1.1"
description = "Parse the X Lossless Decoder a.k.a. XLD app log files"
readme = "README.md"
authors = [
    { name = "rinsuki", email = "428rinsuki+pypi@gmail.com" }
]
requires-python = ">=3.12.6"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
